[gd_scene load_steps=3 format=2]

[ext_resource path="res://themes/menu.tres" type="Theme" id=1]
[ext_resource path="res://Menus/InGameMenu/InGameMenu.gd" type="Script" id=2]

[node name="InGameMenu" type="Control"]
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_top = 1.0
margin_right = 632.0
margin_bottom = 445.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -182.0
margin_bottom = 182.0

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
margin_right = 632.0
margin_bottom = 88.0
text = "Resume"

[node name="Save" type="Button" parent="Panel/VBoxContainer"]
margin_top = 92.0
margin_right = 632.0
margin_bottom = 180.0
text = "Save"

[node name="QuitToMainMenu" type="Button" parent="Panel/VBoxContainer"]
margin_top = 184.0
margin_right = 632.0
margin_bottom = 272.0
text = "Quit To Main Menu"

[node name="QuitToDesktop" type="Button" parent="Panel/VBoxContainer"]
margin_top = 276.0
margin_right = 632.0
margin_bottom = 364.0
text = "Quit To Desktop"

[connection signal="button_up" from="Panel/VBoxContainer/Resume" to="." method="_on_Resume_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/Save" to="." method="_on_Save_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/QuitToMainMenu" to="." method="_on_QuitToMainMenu_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/QuitToDesktop" to="." method="_on_QuitToDesktop_button_up"]
